# GridForge

./: .gitignore  Procfile  README.md  pyproject.toml  render.yaml
cmake_preset_matrix/: __init__.py  cli.py  core.py  web.py
cmake_preset_matrix/templates/: index.html
examples/: cuda_project.yaml  simple.yaml
tests/: test_core.py
