[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cmake-preset-matrix"
version = "0.1.0"
description = "Auto-generate CMakePresets.json from a simple YAML build matrix config"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kartik Chaudhary"},
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
cmake-preset-matrix = "cmake_preset_matrix.cli:main"

[tool.setuptools.packages.find]
include = ["cmake_preset_matrix*"]

[tool.setuptools.package-data]
cmake_preset_matrix = ["templates/*.html", "static/*"]
